--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<meta name="theme-color" content="#e8553f" />
+	<meta name="theme-color" content="#414048" />
 <!--Chocolate
 #e8553f
 Copy
