--- a/index.html
+++ b/index.html
@@ -27,27 +27,9 @@ Light Steel Blue
 </head>
 
 <body>
-	<div class="ui basic modal">
-  <div class="ui icon header">
-    <i class="archive icon"></i>
-    Hi, There
-  </div>
-  <div class="content">
-    <p>I am Nipun Aggarwal, a Developer and a Data Scientist. Are You here to Hire?</p>
-  </div>
-  <div class="actions">
-    <div class="ui red basic cancel inverted button">
-      <i class="remove icon"></i>
-      No,Just checking out!
-    </div>
-    <div class="ui green ok inverted button">
-      <i class="checkmark icon"></i>
-      Yes, found you good!
-    </div>
-  </div>
-</div>
+	
 	<!-- Navbar -->
-<div class="ui compact inverted menu fixed">
+<div class="ui four item inverted menu fixed">
   <a class="item" href="#Namelogo">
     <img src="images/1.png" class="ui image mini">
     Nipun Aggarwal
