--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Light Steel Blue
   </div>
   <div class="card">
     <div class="image">
-      <img src="/images/2.png">
+      <img src="images/2.png">
     </div>
   </div>
   <div class="card">
