Added another block in Menu

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Light Steel Blue
 <body>
 	
 	<!-- Navbar -->
-<div class="ui four item inverted menu fixed">
+<div class="ui five item inverted menu fixed">
   <a class="item" href="#Namelogo">
     <img src="images/1.png" class="ui image mini">
     Nipun Aggarwal
@@ -46,6 +46,11 @@ Light Steel Blue
     <i class="video play icon"></i>
     Projects
   </a>
+  <a class="item" href="#Hire">
+    <i class="student icon"></i>
+    Projects
+  </a>
+	
 </div>
 
 	<!-- Name and Logo -->
@@ -128,6 +133,11 @@ Light Steel Blue
 
 	<!-- Projects -->
 	<div class="container page" id="Projects">
+		
+	</div>
+	
+	<!--Hire-->
+	<div class="container page" id="Hire">
 		
 	</div>
 <script type="text/javascript">
