--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Light Steel Blue
   </a>
   <a class="item" href="#Hire">
     <i class="student icon"></i>
-    Projects
+    Hire Me!
   </a>
 	
 </div>
