Made more apt labels

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Light Steel Blue
 <div class="ui five item inverted menu fixed">
   <a class="item" href="#Namelogo">
     <img src="images/1.png" class="ui image mini">
-    Nipun Aggarwal
+    Nipun
   </a>
   <a class="item" href="#Skills">
     <i class="trophy icon"></i>
@@ -48,7 +48,7 @@ Light Steel Blue
   </a>
   <a class="item" href="#Hire">
     <i class="student icon"></i>
-    Hire Me!
+    Hiring
   </a>
 	
 </div>
